added waitforvirtualthreads